--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,9 @@
 
 @use './components/card.scss';
 @use './components/tabs.scss';
+@use './components/checkbox.scss';
+@use './components/button.scss';
+@use './components/text-input.scss';
 
 * {
     box-sizing: border-box;
