--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -1,34 +1,37 @@
+@use '../vars.scss';
+
 .tabs {
-    display: flex;
-    flex-wrap: nowrap;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 4px;
     border-radius: 8px;
-    box-shadow: inset 0 0 0 1px #d6d6d6;
-    margin-left: auto;
+    background-color: vars.$accent12;
 
     &__button {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 36px;
+        height: 44px;
         margin: 0;
-        padding: 0 16px;
+        padding: 0 8px;
         border-radius: 8px;
         border: 1px solid transparent;
         background-color: transparent;
-        color: #5c5c5c;
+        color: vars.$textLBGSecondary;
         font-size: 14px;
         line-height: 20px;
         cursor: pointer;
         transition: all 0.2s;
 
         &:hover {
-            color: #0190db;
+            color: vars.$accent500;
         }
 
         &.active {
-            border-color: rgba(1, 144, 219, 0.32);
-            background-color: #ebf6fc;
-            color: #006fbc;
+            border-color: vars.$accent32;
+            background-color: vars.$interfaceBackground;
+            color: vars.$accent600;
         }
     }
 }
