--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,7 @@
 @use './components/checkbox.scss';
 @use './components/button.scss';
 @use './components/text-input.scss';
+@use './components/link-button.scss';
 
 * {
     box-sizing: border-box;
