--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -17,6 +17,7 @@ $accent12: rgba(1, 144, 219, 0.12);
 $accent48: rgba(1, 144, 219, 0.48);
 $accent500: rgba(1, 144, 219, 1);
 $accent600: rgba(0, 111, 188, 1);
+$accent700: rgba(0, 83, 157, 1);
 $green500: rgba(87, 187, 68, 1);
 $green600: rgba(70, 150, 54, 1);
 $backgroundBlue: rgba(231, 235, 247, 1);
