--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -120,6 +120,12 @@
         .card__description {
             display: none;
         }
+
+        .card__price {
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 24px;
+        }
     }
 
     &__address {
@@ -141,6 +147,7 @@
         flex-wrap: nowrap;
         gap: 2px;
         margin-top: 8px;
-        font-weight: 600;
+        font-size: 28px;
+        line-height: 42px;
     }
 }
