--- a/src/pug/pages/result-present.pug
+++ b/src/pug/pages/result-present.pug
@@ -14,7 +14,7 @@ block content
 
         .steps
             .cards
-                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая'})
+                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая',hasBg:'true',hasImg: 'true'})
 
             .step
                 .step__title Константин Константинович
