--- a/src/pug/pages/step-five.pug
+++ b/src/pug/pages/step-five.pug
@@ -14,8 +14,8 @@ block content
             .header-second__steps Шаг 5 из 5
 
         .steps
-            .cards
-                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая'})
+            .cards.cards__step-five
+                +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', hasBg:'true',hasImg: 'true'})
 
             .step
                 .card-content
