--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -4,12 +4,14 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    height: 192px;
     padding: 16px 24px;
     border-radius: 24px;
     border: 1px solid vars.$darkner4;
     transition: all 0.2s;
 
     &.interactive {
+        height: auto;
         cursor: pointer;
     }
 
@@ -206,8 +208,8 @@
         left: -1px;
         right: -1px;
         background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        background-position: bottom right;
+        background-size: contain;
         z-index: 2;
         border-radius: 24px;
         opacity: 0;
