--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -138,7 +138,7 @@
 
     &__address {
         margin-top: 2px;
-        margin-bottom: 16px;
+        margin-bottom: auto;
         font-size: 12px;
         line-height: 16px;
         color: vars.$textLBGSecondary;
