feat: add desktop

--- a/src/pug/pages/result-self.pug
+++ b/src/pug/pages/result-self.pug
@@ -12,8 +12,8 @@ block content
             .header-first__title Сертификат 675486129
             .header-first__text Вишня, м. Новокузнецкая
 
-        .steps
-            .cards
+        .steps.steps_columns
+            .cards.cards_single
                 +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться'})
 
             .step
