--- a/src/pug/pages/step-two.pug
+++ b/src/pug/pages/step-two.pug
@@ -8,6 +8,9 @@ block content
     include ../icons/icon-ok.pug
 
     .main
+        .header-first.header-first__not-mobile.js-header-first
+            .header-first__title.js-header-first-title Покупка сертификата
+            .header-first__text.js-header-first-text Вишня, м. Новокузнецкая
         .header-second
             button.header-second__back-button(type='button')
                 +caretLeft('header-second__back-icon')
@@ -15,8 +18,8 @@ block content
             .header-second__steps Шаг 2 из 
                 span.js-step-two-last-step 5
 
-        .steps
-            .cards
+        .steps.steps_columns
+            .cards.cards_single
                 +card({name: 'Название сертификата длинным названием', price: '2 000', status: 'Действует 365 дней после активации', address: 'Вишня, м. Новокузнецкая', description: 'Условия где и на что может использоваться'})
 
             form
