--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -13,6 +13,10 @@
     &.interactive {
         height: auto;
         cursor: pointer;
+
+        @media (min-width: 724px) {
+            min-height: 106px;
+        }
     }
 
     &:nth-child(7n + 1) {
