--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,6 +36,8 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    max-width: 768px;
+    margin: 0 auto;
 }
 
 .hidden {
