--- a/src/scss/pages/header.scss
+++ b/src/scss/pages/header.scss
@@ -7,6 +7,15 @@
     padding: 16px 8px;
     background-color: vars.$interfaceBackground;
 
+    &__not-mobile {
+        display: none;
+    }
+
+    @media (min-width: 724px) {
+        display: flex;
+        margin-top: 32px;
+    }
+
     &__title {
         margin: 0 8px;
         overflow: hidden;
@@ -14,6 +23,11 @@
         font-size: 20px;
         font-weight: 500;
         line-height: 24px;
+
+        @media (min-width: 724px) {
+            font-size: 36px;
+            line-height: 48px;
+        }
     }
 
     &__text {
@@ -22,6 +36,11 @@
         font-weight: 600;
         line-height: 20px;
         color: vars.$textLBGSecondary;
+
+        @media (min-width: 724px) {
+            font-size: 16px;
+            line-height: 24px;
+        }
     }
 }
 
@@ -38,6 +57,11 @@
     &__title {
         margin: 0 8px;
         font-weight: 600;
+
+        @media (min-width: 724px) {
+            font-size: 20px;
+            line-height: 24px;
+        }
     }
 
     &__back-button {
@@ -70,6 +94,11 @@
         font-weight: 400;
         line-height: 20px;
         color: vars.$textLBGSecondary;
+
+        @media (min-width: 724px) {
+            font-size: 16px;
+            line-height: 24px;
+        }
     }
 
     &.selected {
