--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -2,12 +2,32 @@
 
 .steps {
     margin: 0 16px 6px;
+
+    @media (min-width: 724px) {
+        padding: 16px;
+        margin: 0;
+
+        &_columns {
+            display: grid;
+            grid-template-columns: 328fr 360fr;
+            gap: 48px;
+        }
+    }
 }
 
 .cards {
     display: flex;
     flex-direction: column;
     gap: 4px;
+
+    @media (min-width: 724px) {
+        display: grid;
+        grid-template-columns: 344px 344px;
+
+        &_single {
+            display: flex;
+        }
+    }
 
     &__step-four {
         gap: 16px;
@@ -28,6 +48,16 @@
         font-size: 20px;
         font-weight: 500;
         line-height: 24px;
+
+        &_hide-tablet {
+            @media (min-width: 724px) {
+                display: none;
+            }
+        }
+    }
+
+    @media (min-width: 724px) {
+        margin: 0;
     }
 }
 
@@ -93,5 +123,10 @@
 
     &__button {
         width: 100%;
+
+        @media (min-width: 724px) {
+            width: auto;
+            min-width: 160px;
+        }
     }
 }
