--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -2,20 +2,23 @@
 
 .card {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    height: 192px;
-    padding: 16px 24px;
+    width: 100%;
+    padding-top: calc((100% - 2px) * (24 / 41));
     border-radius: 24px;
     border: 1px solid vars.$darkner4;
     transition: all 0.2s;
 
     &.interactive {
+        padding-top: 0;
         height: auto;
         cursor: pointer;
 
         @media (min-width: 724px) {
             min-height: 106px;
+        }
+
+        .card__content {
+            position: relative;
         }
     }
 
@@ -75,6 +78,17 @@
         &:nth-child(7n) {
             background-color: vars.$backgroundPurpleHover;
         }
+    }
+
+    &__content {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 16px 24px;
     }
 
     &__name {
